--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "echo 'No tests'"
   },
   "dependencies": {
+    "framer-motion": "^12.16.0",
     "next": "14.2.29",
     "node-cache": "^5.1.2",
     "react": "^18",
